--- a/public/css/paybill.css
+++ b/public/css/paybill.css
@@ -3,15 +3,17 @@
     padding: 0;
     box-sizing: border-box;
   }
+
+  ::-webkit-scrollbar {
+      display: none;
+  }
+
   
   body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
     background-color: #BC942D;
     color: #333;
     line-height: 1.4;
-    overflow: hidden;
-    overflow-x: hidden;
-    overflow-y: hidden;
   }
   
   .mobile-container {
@@ -485,7 +487,6 @@
   @media (min-width: 415px) {
     .mobile-container {
       border-radius: 12px;
-      margin: 20px auto;
       overflow: hidden;
       max-height: calc(100vh - 40px);
       overflow-y: auto;
