renamed paybill to billers

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -28,7 +28,7 @@
       </div>
     
       <div class="grid-item">
-        <a href="/paybill" class="pay-bill">
+        <a href="/billers" class="pay-bill">
           <div class="grid-icon">
             <img src="/img/paybillicon.png" width="35" height="35">
           </div>
