--- a/views/billers.ejs
+++ b/views/billers.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pay Bills</title>
-    <link rel="stylesheet" href="/css/paybill.css">
+    <link rel="stylesheet" href="/css/billers.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     </head>
     <body>
@@ -63,7 +63,7 @@
                     </span>
                     </div>
                 </div>
-                <button class="pay-now-btn" onclick="payBill(<%= bill.Bill_ID %>, '<%= bill.Biller_Name %>', <%= bill.Bill_Amount %>)">
+                <button class="pay-now-btn" onclick="billers(<%= bill.Bill_ID %>, '<%= bill.Biller_Name %>', <%= bill.Bill_Amount %>)">
                     Pay Now
                 </button>
                 </div>
@@ -157,7 +157,7 @@
                 <div class="bill-amount urgent">₱<%= Number(bill.Bill_Amount).toFixed(2) %></div>
                 <div class="overdue-date">Due: <%= bill.Due_Date.toISOString().split('T')[0] %></div>
                 </div>
-                <button class="pay-urgent-btn" onclick="payBill(<%= bill.Bill_ID %>, '<%= bill.Biller_Name %>', <%= bill.Bill_Amount %>)">
+                <button class="pay-urgent-btn" onclick="billers(<%= bill.Bill_ID %>, '<%= bill.Biller_Name %>', <%= bill.Bill_Amount %>)">
                 Pay Now
                 </button>
             </div>
@@ -167,7 +167,7 @@
     </div>
 
     <script>
-        function payBill(billId, billerName, amount) {
+        function billers(billId, billerName, amount) {
         const userBalance = <%= balance %>;
         
         if (amount > userBalance) {
