--- a/views/ewallet-payment.ejs
+++ b/views/ewallet-payment.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-Wallet Payment - <%= bill.Biller_Name %></title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="/css/ewallet-payment.css">
 </head>
 <body>
     <div class="mobile-container">
